--- a/sass/components/_projects.scss
+++ b/sass/components/_projects.scss
@@ -29,6 +29,9 @@
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
   }
+  &:hover .top-project-text {
+    transform: translateY(0);
+  }
 }
 
 .pjoject-text {
@@ -68,9 +71,6 @@
   color: var(--secondary-text-color);
 }
 
-.project-item:hover .top-project-text {
-  transform: translateY(0);
-}
 .top-project-text {
   display: flex;
   width: 370px;
