--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,11 @@ body {
   text-decoration: none;
 }
 
+.link:hover, .link:focus {
+  color: var(--accent-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .list {
   list-style: none;
 }
@@ -68,13 +73,14 @@ body {
   margin-right: 93px;
 }
 
-.site-nav__list {
+.site-nav__item-link {
   font-weight: 500;
   font-style: normal;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  color: var(--secondary-title-color);
+  color: currentColor;
+  color: #212121;
 }
 
 .site-nav__item {
@@ -151,12 +157,6 @@ body {
   fill: solid #2196f3;
 }
 
-.link:hover,
-.link:focus {
-  color: var(--accent-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .contact-list {
   display: flex;
   margin-left: auto;
@@ -190,7 +190,7 @@ body {
 }
 
 .hero-btn__button {
-  font-style: Bold;
+  font-weight: 700;
   font-size: 16px;
   line-height: 1.6em;
   margin: 0 auto;
@@ -662,7 +662,7 @@ body {
   position: fixed;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0.2);
   top: 0;
   display: flex;
   align-items: center;
@@ -686,10 +686,23 @@ body {
   justify-content: center;
 }
 
+.close-btn:hover, .close-btn:focus {
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  border: 1px solid #2196f3;
+}
+
 .close-svg {
   width: 100%;
   height: 18px;
   display: block;
+  color: currentColor;
+}
+
+.close-svg:hover, .close-svg:focus {
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  fill: #2196f3;
 }
 
 .modal-form-list {
@@ -946,6 +959,10 @@ body {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
+.project-item:hover .top-project-text {
+  transform: translateY(0);
+}
+
 .pjoject-text {
   padding-top: 20px;
   padding-bottom: 20px;
@@ -986,10 +1003,6 @@ body {
   line-height: 1.87;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
-}
-
-.project-item:hover .top-project-text {
-  transform: translateY(0);
 }
 
 .top-project-text {
