--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -7,6 +7,11 @@ body {
 }
 .link {
   text-decoration: none;
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 .list {
   list-style: none;
