--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,10 +1,11 @@
-.site-nav__list {
+.site-nav__item-link {
   font-weight: 500;
   font-style: normal;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  color: var(--secondary-title-color);
+  color: currentColor;
+  color: #212121;
 }
 .site-nav__item {
   position: relative;
