--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -17,7 +17,7 @@
   position: fixed;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0.2);
   top: 0;
   display: flex;
   align-items: center;
@@ -38,11 +38,25 @@
   border-radius: 50%;
   align-items: center;
   justify-content: center;
+  &:hover,
+  &:focus {
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    border: 1px solid #2196f3;
+  }
 }
+
 .close-svg {
   width: 100%;
   height: 18px;
   display: block;
+  color: currentColor;
+  &:hover,
+  &:focus {
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    fill: #2196f3;
+  }
 }
 .modal-form-list {
   display: block;
